# DX11-Multi-Window-Sync-Assistant

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  app.manifest  build.bat  resource.rc  resource.rc.in
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
docs/superpowers/plans/: 2026-07-11-v3.2-input-sync-and-window-order.md
scripts/: package.ps1
src/: app_window.cpp  app_window.h  key_blacklist.cpp  main.cpp  sync_controller.cpp  sync_controller.h  sync_engine.cpp  sync_engine.h  window_list_model.cpp  window_list_model.h  window_manager.cpp  window_manager.h
src/qml/: MainWindow.qml
tests/: build_tests.bat  window_manager_sort_tests.cpp
